--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
@@ -287,9 +287,14 @@
 							<p id="clinic-name">地址</p>
 							<p id="clinic-address">上海市新乐路70弄3号</p>
 						</li>
+
 						<li>
+							
 							<p id="clinic-name">电话</p>
 							<p id="clinic-address">陈老师021－64549725</p>
+						</li>
+						<li>
+							<img src="images/route.png" />
 						</li>
 					</ul>
 				</div>
